--- a/README.pod
+++ b/README.pod
@@ -1,663 +1,4 @@
-package Net::SSH2;
-
-our $VERSION = '0.71';
-
-use 5.006;
-use strict;
-use warnings;
-use warnings::register;
-use Carp;
-
-require Net::SSH2::Constants;
-
-use Socket;
-use IO::File;
-use File::Basename;
-use Errno;
-
-# load IO::Socket::IP when available, otherwise fallback to IO::Socket::INET.
-
-my $socket_class = do {
-    local ($SIG{__DIE__}, $SIG{__WARN__}, $@, $!);
-    eval {
-        require IO::Socket::IP;
-        'IO::Socket::IP';
-    }
-} || do {
-    require IO::Socket::INET;
-    'IO::Socket::INET'
-};
-
-# methods
-
-sub new {
-    my ($class, %opts) = @_;
-    my $self = $class->_new;
-
-    for (qw(trace timeout debug)) {
-        $self->$_($opts{$_}) if defined $opts{$_}
-    }
-    $self->flag(COMPRESS => $opts{compress})
-        if defined $opts{compress} and (version())[1] >= 0x10500;
-    $self->flag(SIGPIPE => $opts{sigpipe})
-        if defined $opts{sigpipe};
-
-    return $self;
-}
-
-sub die_with_error {
-    my $self = shift;
-    if (my ($code, $name, $string) = $self->error) {
-        croak join(": ", @_, "$string ($code $name)");
-    }
-    else {
-        croak join(": ", @_, "no libssh2 error registered");
-    }
-}
-
-sub method {
-    my $self = shift;
-    my $method_type = shift;
-    $self->_method($method_type => (@_ ? join(',', @_) : ()));
-}
-
-my $connect_opts_warned;
-my $connect_fd_warned;
-my $connect_void_warned;
-sub connect {
-    my $self = shift;
-    defined $_[0] or croak "Net::SSH2::connect: hostname argument is undefined";
-
-    # try to connect, or get a file descriptor
-    my ($fd, $sock);
-    if (@_ == 1) {
-        $sock = shift;
-        if ($sock =~ /^\d{1,10}$/) {
-            $connect_fd_warned++ or
-                warnings::warnif($self, "Passing a file descriptor number to connect is deprecated");
-            $fd = $sock;
-        } elsif(ref $sock) {
-            # handled below
-        } else {
-            @_ = ($sock, 'ssh');
-        }
-    }
-
-    my %opts = (@_ > 2 ? splice(@_, 2) : ());
-    if (%opts) {
-        $connect_opts_warned++ or
-            warnings::warnif($self, "Passing options to connect is deprecated");
-        $self->timeout(1000 * $opts{Timeout}) if $opts{Timeout};
-        if ($opts{Compress} and
-            ($self->version)[1] >= 0x10500) {
-            $self->flag(COMPRESS => 1);
-        }
-    }
-
-    my ($hostname, $port);
-    if (@_ == 2) {
-        ($hostname, $port) = @_;
-        if (not defined $port) {
-            $port = getservbyname('ssh', 'tcp') || 22;
-        }
-        elsif ($port =~ /\D/) {
-            $port = getservbyname($port, 'tcp');
-            unless (defined $port) {
-                $self->_set_error(LIBSSH2_ERROR_SOCKET_NONE(), "Unable to resolve TCP service name $_[1]");
-                goto error;
-            }
-        }
-
-        my $timeout = $self->timeout;
-        $sock = $socket_class->new( PeerHost => $hostname,
-                                    PeerPort => $port,
-                                    Blocking => $self->blocking,
-                                    (defined($timeout) ? (Timeout => 0.001 * $timeout) : ()) );
-        unless ($sock) {
-            $self->_set_error(LIBSSH2_ERROR_SOCKET_NONE(), "Unable to connect to remote host: $!");
-            goto error;
-        }
-        $sock->sockopt(SO_LINGER, pack('SS', 0, 0));
-    }
-
-    # get a file descriptor
-    unless (defined $fd) {
-        $fd = fileno($sock);
-        unless (defined $fd) {
-            $self->_set_error(LIBSSH2_ERROR_SOCKET_NONE(), "Unable to get file descriptor from socket: $!");
-            goto error;
-        }
-    }
-
-    if ($^O eq 'MSWin32') {
-        require Win32API::File;
-        $fd = Win32API::File::FdGetOsFHandle($fd);
-    }
-
-    {
-        local ($@, $SIG{__DIE__});
-        $port = eval { $sock->peerport } || 22
-            unless defined $port;
-        $hostname = eval { $sock->peername }
-            unless defined $hostname;
-    }
-
-    # pass it in, do protocol
-    return $self->_startup($fd, $sock, $hostname, $port);
-
- error:
-    unless (defined wantarray) {
-        unless ($connect_void_warned++) {
-            local $!;
-            warnings::warnif($self, "Calling connect in void context is deprecated");
-        }
-        croak "Net::SSH2: failed to connect to ". join(':', grep defined, @_[0,1]) .": $!";
-    }
-    return;
-}
-
-sub _auth_methods {
-    return {
-        'agent' => {
-            ssh => 'publickey',
-            method => \&auth_agent,
-            params => [qw(_fallback username)],
-        },
-        'hostbased'     => {
-            ssh    => 'hostbased',
-            method => \&auth_hostbased,
-            params => [qw(username publickey privatekey
-                       hostname local_username? passphrase?)],
-        },
-        'publickey'     => {
-            ssh    => 'publickey',
-            method => \&auth_publickey,
-            params => [qw(username publickey? privatekey passphrase?)],
-        },
-        'keyboard'      => {
-            ssh    => 'keyboard-interactive',
-            method => \&auth_keyboard,
-            params => [qw(_interact _fallback username cb_keyboard?)]
-        },
-        'keyboard-auto' => {
-            ssh    => 'keyboard-interactive',
-            method => \&auth_keyboard,
-            params => [qw(username password)],
-        },
-        'password'      => {
-            ssh    => 'password',
-            method => \&auth_password,
-            params => [qw(username password cb_password?)],
-        },
-        'password-interact'  => {
-             ssh    => 'password',
-             method => \&auth_password_interact,
-             params => [qw(_interact _fallback username cb_password?)],
-        },
-        'none'          => {
-            ssh    => 'none',
-            method => \&auth_password,
-            params => [qw(username)],
-        },
-    };
-}
-
-my @rank_default = qw(hostbased publickey keyboard-auto password agent keyboard password-interact none);
-
-sub _auth_rank {
-    my ($self, $rank) = @_;
-    $rank ||= \@rank_default;
-    my $libver = ($self->version)[1] || 0;
-    return @$rank if $libver > 0x010203;
-    return grep { $_ ne 'agent' } @$rank;
-}
-
-sub _local_user {
-    for (qw(USER LOGNAME)) {
-        return $ENV{$_} if defined $ENV{$_}
-    }
-
-    local ($@, $SIG{__DIE__}, $SIG{__WARN__});
-
-    my $u = eval { getlogin };
-    return $u if defined $u;
-
-    eval { getpwuid $< }
-}
-
-my $password_when_you_mean_passphrase_warned;
-sub auth {
-    my ($self, %p) = @_;
-
-    $self->_set_error(LIBSSH2_ERROR_AUTHENTICATION_FAILED(),
-                      "Authentication failed"); # default error
-
-    $p{username} = _local_user unless defined $p{username};
-
-    my @rank = $self->_auth_rank(delete $p{rank});
-    my $remote_rank;
-    $remote_rank = { map { $_ => 1 } $self->auth_list($p{username}) }
-        if defined $p{username};
-
-    # if fallback is set, interact with the user even when a password
-    # is given
-    $p{fallback} = 1 unless defined $p{password} or defined $p{passphrase};
-
-    TYPE: for(my $i = 0; $i < @rank; $i++) {
-        my $type = $rank[$i];
-        my $data = $self->_auth_methods->{$type};
-        unless ($data) {
-            carp "unknown authentication method '$type'";
-            next;
-        }
-        next if $remote_rank and !$remote_rank->{$data->{ssh}};
-
-        # do we have the required parameters?
-        my @pass;
-        for my $param(@{$data->{params}}) {
-            my $p = $param;
-            my $opt = $p =~ s/\?$//;
-            my $pseudo = $p =~ s/^_//;
-
-            if ($p eq 'passphrase' and not exists $p{$p} and defined $p{password}) {
-                $p = 'password';
-                $password_when_you_mean_passphrase_warned++
-                    or carp "Using the key 'password' to refer to a passphrase is deprecated. Use 'passphrase' instead";
-            }
-
-            if ($pseudo) {
-                next TYPE unless $p{$p};
-            }
-            else {
-                next TYPE unless $opt or defined $p{$p};
-                push @pass, $p{$p};  # if it's optional, store undef
-            }
-        }
-
-        # invoke the authentication method
-        return $type if $data->{method}->($self, @pass) and $self->auth_ok;
-    }
-
-    return 'none' if  $self->auth_ok;
-    return;  # failure
-}
-
-my $term_readkey_unavailable_warned;
-my $term_readkey_loaded;
-sub _load_term_readkey {
-    return 1 if $term_readkey_loaded ||= do {
-        local ($@, $!, $SIG{__DIE__}, $SIG{__WARN__});
-        eval { require Term::ReadKey; 1 }
-    };
-
-    carp "Unable to load Term::ReadKey, will not ask for passwords at the console!"
-        unless $term_readkey_unavailable_warned++;
-    return;
-}
-
-sub _print_stderr {
-    my $self = shift;
-    my $ofh = select STDERR; local $|= 1; select $ofh;
-    print STDERR $_ for @_;
-}
-
-sub _ask_user {
-    my ($self, $prompt, $echo) = @_;
-    my $timeout;
-    if (($self->version)[1] >= 0x10209) {
-        $timeout = $self->timeout || 0;
-        $timeout = ($timeout + 999) / 1000;
-    }
-    _load_term_readkey or return;
-    $self->_print_stderr($prompt);
-    Term::ReadKey::ReadMode('noecho') unless $echo;
-    my $reply = Term::ReadKey::ReadLine($timeout);
-    Term::ReadKey::ReadMode('normal') unless $echo;
-    $self->_print_stderr("\n")
-        unless $echo and defined $reply;
-    if (defined $reply) {
-        chomp $reply
-    }
-    else {
-        $self->_set_error(LIBSSH2_ERROR_SOCKET_TIMEOUT(),
-                          "Timeout waiting for user response!");
-    }
-    return $reply;
-}
-
-sub auth_password_interact {
-    my ($self, $username, $cb) = @_;
-    _load_term_readkey or return;
-    my $rc;
-    for (0..2) {
-        my $password = $self->_ask_user("${username}'s password? ", 0);
-        $rc = $self->auth_password($username, $password, $cb);
-        last if $rc or $self->error != LIBSSH2_ERROR_AUTHENTICATION_FAILED();
-        my $ofh = select STDERR; local $|= 1; select $ofh;
-        $self->_print_stderr("Password authentication failed!\n");
-    }
-    return $rc;
-}
-
-sub _local_home {
-    return $ENV{HOME} if defined $ENV{HOME};
-    local ($@, $SIG{__DIE__}, $SIG{__WARN__});
-    my $home = eval { (getpwuid($<))[7] };
-    return $home;
-}
-
-my $check_hostkey_void_ctx_warned;
-sub check_hostkey {
-    my ($self, $policy, $path, $comment) = @_;
-
-    defined wantarray or $check_hostkey_void_ctx_warned++ or
-        warnings::warnif($self, "Calling check_hostkey in void context is useless");
-
-    my $cb;
-    if (not defined $policy) {
-        $policy = LIBSSH2_HOSTKEY_POLICY_STRICT();
-    }
-    elsif (ref $policy eq 'CODE') {
-        $cb = $policy;
-    }
-    else {
-        $policy =  _parse_constant(HOSTKEY_POLICY => $policy);
-    }
-
-    my $hostname = $self->hostname;
-    croak("hostname unknown: in order to use check_hostkey the peer host name ".
-          "must be given (or discoverable) at connect time")
-        unless defined $hostname;
-
-    unless (defined $path) {
-        my $home = _local_home;
-        unless (defined $home) {
-            $self->_set_error(LIBSSH2_ERROR_FILE(), "Unable to determine known_hosts location");
-            return;
-        }
-        require File::Spec;
-        $path = File::Spec->catfile($home, '.ssh', 'known_hosts');
-    }
-
-    my ($check, $key, $type, $flags);
-    my $kh = $self->known_hosts;
-    if ($kh and defined $kh->readfile($path)) {
-
-        ($key, $type) = $self->remote_hostkey;
-        $flags = ( LIBSSH2_KNOWNHOST_TYPE_PLAIN() |
-                   LIBSSH2_KNOWNHOST_KEYENC_RAW() |
-                   (($type + 1) << LIBSSH2_KNOWNHOST_KEY_SHIFT()) );
-
-        $check = $kh->check($hostname, $self->port, $key, $flags);
-        $check == LIBSSH2_KNOWNHOST_CHECK_MATCH() and return "00";
-    }
-    else {
-        $check = LIBSSH2_KNOWNHOST_CHECK_FAILURE();
-    }
-
-    if ($cb) {
-        my $ok = $cb->($self, $check, $comment);
-        $ok or $self->_set_error(LIBSSH2_ERROR_KNOWN_HOSTS(), 'Host key verification failed');
-        return $ok;
-    }
-
-    return $check
-        if $policy == LIBSSH2_HOSTKEY_POLICY_ADVISORY(); # user doesn't care!
-
-    if ($check == LIBSSH2_KNOWNHOST_CHECK_NOTFOUND()) {
-        $self->_set_error(LIBSSH2_ERROR_KNOWN_HOSTS(), 'Unable to verify host key, host not found');
-        unless ($policy == LIBSSH2_HOSTKEY_POLICY_TOFU()) {
-            if ($policy == LIBSSH2_HOSTKEY_POLICY_ASK()) {
-                my $fp = unpack 'H*', $self->hostkey_hash(LIBSSH2_HOSTKEY_HASH_SHA1());
-                my $yes = $self->_ask_user("The authenticity of host '$hostname' can't be established.\n" .
-                                           "Key fingerprint is SHA1:$fp.\n" .
-                                           "Are you sure you want to continue connecting (yes/no)? ", 1);
-                unless ($yes =~ /^y(es)?$/i) {
-                    $self->_set_error(LIBSSH2_ERROR_KNOWN_HOSTS(), 'Host key verification failed: user did not accept the key');
-                    return undef;
-                }
-            }
-        }
-
-        $comment = '(Net::SSH2)' unless defined $comment;
-        # we ignore errors here, that is the usual SSH client behaviour
-        $kh->add($hostname, $self->port, $key, $comment, $flags) and
-            $kh->writefile($path);
-
-        return $check;
-    }
-
-    $self->_set_error(LIBSSH2_ERROR_KNOWN_HOSTS(), 'Host key verification failed: '.
-                      ( ($check == LIBSSH2_KNOWNHOST_CHECK_NOTFOUND())
-                        ? "key not found in '$path'"
-                        : "unable to perform the check"));
-    return undef;
-}
-
-sub scp_get {
-    my ($self, $remote, $path) = @_;
-    $path = basename $remote if not defined $path;
-
-    my %stat;
-    $self->blocking(1);
-    my $chan = $self->_scp_get($remote, \%stat) or return;
-
-    # read and commit blocks until we're finished
-    my $file;
-    if (ref $path) {
-        $file = $path;
-    }
-    else {
-        my $mode = $stat{mode} & 0777;
-        $file = IO::File->new($path, O_WRONLY | O_CREAT | O_TRUNC, $mode);
-        unless ($file) {
-            $self->_set_error(LIBSSH2_ERROR_FILE(), "Unable to open local file: $!");
-            return;
-        }
-        binmode $file;
-    }
-
-    my $size = $stat{size};
-    while ($size > 0) {
-        my $bytes_read = $chan->read(my($buf), (($size > 40000 ? 40000 : $size)));
-        if ($bytes_read) {
-            $size -= $bytes_read;
-            while (length $buf) {
-                my $bytes_written = $file->syswrite($buf, length $buf);
-                if ($bytes_written) {
-                    substr $buf, 0, $bytes_written, '';
-                }
-                elsif ($! != Errno::EAGAIN() &&
-                       $! != Errno::EINTR()) {
-                    $self->_set_error(LIBSSH2_ERROR_FILE(), "Unable to write to local file: $!");
-                    return;
-                }
-            }
-        }
-        elsif (!defined($bytes_read) and
-               $self->error != LIBSSH2_ERROR_EAGAIN()) {
-            return;
-        }
-    }
-
-    # process SCP acknowledgment and send same
-    $chan->read(my $eof, 1);
-    $chan->write("\0");
-    return 1;
-}
-
-sub scp_put {
-    my ($self, $path, $remote) = @_;
-    $remote = basename $path if not defined $remote;
-
-    my $file;
-    if (ref $path) {
-        $file = $path;
-    }
-    else {
-        $file = IO::File->new($path, O_RDONLY);
-        unless ($file) {
-            $self->_set_error(LIBSSH2_ERROR_FILE(), "Unable to open local file: $!");
-            return;
-        }
-        binmode $file;
-    }
-
-    my @stat = $file->stat;
-    unless (@stat) {
-        $self->_set_error(LIBSSH2_ERROR_FILE(), "Unable to stat local file: $!");
-        return;
-    }
-
-    my $mode = $stat[2] & 0777;  # mask off extras such as S_IFREG
-    $self->blocking(1);
-    my $chan = $self->_scp_put($remote, $mode, @stat[7, 8, 9]) or return;
-
-    # read and transmit blocks until we're finished
-    my $size = $stat[7];
-    while ($size > 0) {
-        my $bytes_read = $file->sysread(my($buf), ($size > 32768 ? 32768 : $size));
-        if ($bytes_read) {
-            $size -= $bytes_read;
-            while (length $buf) {
-                my $bytes_written = $chan->write($buf);
-                if (defined $bytes_written) {
-                    substr($buf, 0, $bytes_written, '');
-                }
-                elsif ($chan->error != LIBSSH2_ERROR_EAGAIN()) {
-                    return;
-                }
-            }
-        }
-        elsif (defined $bytes_read) {
-            $self->_set_error(LIBSSH2_ERROR_FILE(), "Unexpected end of local file");
-            return;
-        }
-        elsif ($! != Errno::EAGAIN() and
-               $! != Errno::EINTR()) {
-            $self->_set_error(LIBSSH2_ERROR_FILE(), "Unable to read local file: $!");
-            return;
-        }
-    }
-
-    # send/receive SCP acknowledgement
-    $chan->write("\0");
-    return $chan->read(my($eof), 1) || undef;
-}
-
-my %Event;
-
-sub _init_poll {
-    for my $event(qw(
-     pollin pollpri pollext pollout pollerr pollhup pollnval pollex
-     session_closed channel_closed listener_closed
-    )) {
-        no strict 'refs';
-        my $name = 'LIBSSH2_POLLFD_'.uc($event);
-        (my $_event = $event) =~ s/^poll//;
-        $Event{$_event} = &$name;
-    }
-}
-
-sub poll {
-    my ($self, $timeout, $event) = @_;
-    $timeout ||= 0;
-
-    # map incoming event structure (files to handles, events to integers)
-    my @event;
-    for my $in (@$event) {
-        my ($handle, $events) = @{$in}{qw(handle events)};
-        $handle = fileno $handle
-         unless ref $handle and ref($handle) =~ /^Net::SSH2::/;
-        my $out = { handle => $handle, events => 0 };
-        $events = [$events] if not ref $events and $events =~ /^\D+$/;
-        if (UNIVERSAL::isa($events, 'ARRAY')) {
-            for my $name(@$events) {
-                my $value = $Event{$name};
-                croak "Net::SSH2::poll: can't translate event '$name'"
-                 unless defined $value;
-                $out->{events} |= $value;
-            }
-        } else {
-            $out->{events} = $events || 0;
-        }
-        push @event, $out;
-    }
-
-    my $count = $self->_poll($timeout, \@event);
-    return if not defined $count;
-
-    # map received event structure (bitmask to hash of flags)
-    my $i = 0;
-    for my $item(@event) {
-        my $revents = $item->{revents};
-        my $out = $event->[$i++]->{revents} = { value => $revents };
-        my $found = 0;  # can't mask off values, since there are dupes
-        while (my ($name, $value) = each %Event) {
-            $out->{$name} = 1, $found |= $value if $revents & $value;
-        }
-        $out->{unknown} = $revents & ~$found if $revents & ~$found;
-    }
-    $count
-}
-
-sub _cb_kbdint_response_default {
-    my ($self, $user, $name, $instr, @prompt) = @_;
-    _load_term_readkey or return;
-
-    my $prompt = "[user $user] ";
-    $prompt .= "$name\n" if $name;
-    $prompt .= "$instr\n" if $instr;
-    $prompt =~ s/ $/\n/;
-    $self->_print_stderr($prompt);
-
-    return map $self->_ask_user($_->{text}, $_->{echo}), @prompt;
-}
-
-my $hostkey_warned;
-sub hostkey {
-    $hostkey_warned++ or carp "Net::SSH2 'hostkey' method is obsolete, use 'hostkey_hash' instead";
-    shift->hostkey_hash(@_);
-}
-
-sub auth_list {
-    my $auth = shift->_auth_list(@_);
-    return unless defined $auth;
-    wantarray ? split(/,/, $auth) : $auth
-}
-
-# mechanics
-
-sub AUTOLOAD {
-    # This AUTOLOAD is used to 'autoload' constants from the constant()
-    # XS function.
-
-    my $constname;
-    our $AUTOLOAD;
-    ($constname = $AUTOLOAD) =~ s/.*:://;
-    croak "&Net::SSH2::constant not defined" if $constname eq 'constant';
-    my ($error, $val) = constant($constname);
-    if ($error) { croak $error; }
-    {
-        no strict 'refs';
-        *$AUTOLOAD = sub { $val };
-    }
-    goto &$AUTOLOAD;
-}
-
-require XSLoader;
-XSLoader::load('Net::SSH2', $VERSION);
-
-_init_poll();
-
-require Net::SSH2::Channel;
-require Net::SSH2::SFTP;
-require Net::SSH2::File;
-require Net::SSH2::Listener;
-require Net::SSH2::KnownHosts;
-
-1;
-__END__
+=pod
 
 =head1 NAME
 
