Add a cast to fix compile error, update README.pod
Fix a compile error caused by a libssh2 variable being declared as
`unsigned char *` and being passed `newSVpvn()` which expects a `const
char *` by adding a cast.

Update README.pod.

Signed-off-by: Rafael Kitover <rkitover@gmail.com>

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Net::SSH2.
 
+	- Add a cast to fix an error on some compilations.
+	- Update README.pod.
+
 0.73  2022-08-03
 	- Switch to -std=c11 because Perl uses thread_local now #58
 
