--- a/Changes
+++ b/Changes
@@ -1,8 +1,14 @@
 Revision history for Perl extension Net::SSH2.
 
+0.75
+        - Add more constants from libssh2.h
+        - Handle hostkey hashes of type SHA256
+        - Some deprecation warnings can not be silenced anymore.
+
 0.74  2024-09-02
 	- Add a cast to fix an error on some compilations.
 	- Update README.pod.
+
 
 0.73  2022-08-03
 	- Switch to -std=c11 because Perl uses thread_local now #58
